[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/trap_gun.png" type="Texture" id=1]
[ext_resource path="res://entity/trap_gun.gd" type="Script" id=2]

[node name="trap_gun" type="Node2D"]
script = ExtResource( 2 )
right = false

[node name="Sprite_right" type="Sprite" parent="."]
position = Vector2( 33, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite_left" type="Sprite" parent="."]
position = Vector2( -33, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
flip_h = true

[node name="RayCast2D_right" type="RayCast2D" parent="."]
position = Vector2( 21, 0 )
enabled = true
cast_to = Vector2( 600, 0 )

[node name="RayCast2D_left" type="RayCast2D" parent="."]
position = Vector2( -21, 0 )
enabled = true
cast_to = Vector2( -600, 0 )

[node name="Position2D_right" type="Position2D" parent="."]
position = Vector2( 26, 0 )

[node name="Position2D_left" type="Position2D" parent="."]
position = Vector2( -26, 0 )

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
